allow reflection used by a base class of the Ghidra base testing class we use